<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <ImageView
        android:id="@+id/iv_bg_alat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-80dp"
        android:scaleType="fitXY"
        android:src="@drawable/elips_splash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <ImageView
        android:id="@+id/alat"
        android:layout_width="363dp"
        android:layout_height="363dp"
        android:scaleType="fitEnd"
        android:src="@drawable/alat_splash"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069"/>


    <TextView
        android:id="@+id/daya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daya"
        android:textSize="70sp"
        android:textColor="?attr/colorPrimary"
        android:layout_marginTop="40dp"
        android:layout_marginStart="25dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/alat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/daya"/>

    <TextView
        android:id="@+id/daya_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daya_baterai"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/daya"
        app:layout_constraintStart_toStartOf="@id/daya"
        app:layout_constraintEnd_toEndOf="@id/daya"
        android:textColor="?attr/colorPrimary"
        android:layout_marginTop="-10dp"/>
    
    <ImageView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/status"
        app:layout_constraintTop_toTopOf="@id/daya"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="17dp"/>

    <TextView
        android:id="@+id/tv_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/status_koneksi"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/daya_text"
        app:layout_constraintEnd_toEndOf="@id/status"
        app:layout_constraintStart_toStartOf="@id/status"
        app:layout_constraintTop_toBottomOf="@id/status"/>

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:backgroundTint="?attr/colorPrimary"
        android:drawableLeft="@drawable/camera_24px"
        android:drawablePadding="10dp"
        android:drawableTint="@color/white"
        android:elevation="10dp"
        android:padding="20dp"
        android:text="@string/ambil_gambar"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/daya_text"/>

    <ImageView
        android:id="@+id/btn_setting"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:src="@drawable/settings_b_roll_24px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        app:tint="?attr/colorOnSurface"/>

</androidx.constraintlayout.widget.ConstraintLayout>