<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/arrow_back_24px"
            app:title="@string/panduan"
            app:titleCentered="true"
            app:titleTextColor="?attr/colorOnSurface"
            app:menu="@menu/setting"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/panduan_penggunaan"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="?attr/colorOnSurface"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_horizontal"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:clipToPadding="false"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />

            <TextView
                android:id="@+id/tv_vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/artikel_terkait"
                android:textColor="?attr/colorOnSurface"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:clipToPadding="false"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>